[gd_scene load_steps=8 format=3 uid="uid://30yxstm3a03m"]

[ext_resource type="Script" path="res://main.gd" id="1_16f6i"]
[ext_resource type="AudioStream" uid="uid://dd4c3jijalhrq" path="res://music/Nothingness.mp3" id="3_8oq0t"]
[ext_resource type="Texture2D" uid="uid://dpss3jvh17bqy" path="res://images/background.jpeg" id="3_j3ik4"]
[ext_resource type="Texture2D" uid="uid://bvh6cbiwwiysa" path="res://images/cthulhu.jpeg" id="5_16460"]
[ext_resource type="Texture2D" uid="uid://b0xoq433n2iub" path="res://images/park.jpeg" id="6_5a63p"]

[sub_resource type="Animation" id="Animation_bdotd"]
resource_name = "play"
length = 4.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Park:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Cthulhu:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(2.5, 4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_q2fgw"]
_data = {
"play": SubResource("Animation_bdotd")
}

[node name="Main" type="Node2D"]
script = ExtResource("1_16f6i")

[node name="PlayButton" type="Button" parent="."]
offset_left = 1392.0
offset_top = 264.0
offset_right = 1824.0
offset_bottom = 488.0
theme_override_font_sizes/font_size = 60
text = "Play"

[node name="QuitButton" type="Button" parent="."]
offset_left = 1392.0
offset_top = 600.0
offset_right = 1824.0
offset_bottom = 824.0
theme_override_font_sizes/font_size = 60
text = "Quit"

[node name="MusicPlayer" type="AudioStreamPlayer2D" parent="."]
unique_name_in_owner = true
stream = ExtResource("3_8oq0t")
autoplay = true

[node name="Background" type="Sprite2D" parent="."]
position = Vector2(544, 544)
scale = Vector2(1.0625, 1.0625)
texture = ExtResource("3_j3ik4")

[node name="Cthulhu" type="Sprite2D" parent="."]
position = Vector2(544, 544)
scale = Vector2(1.0625, 1.0625)
texture = ExtResource("5_16460")

[node name="Park" type="Sprite2D" parent="."]
position = Vector2(544, 544)
scale = Vector2(1.0625, 1.0625)
texture = ExtResource("6_5a63p")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
unique_name_in_owner = true
libraries = {
"": SubResource("AnimationLibrary_q2fgw")
}

[connection signal="pressed" from="PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="QuitButton" to="." method="_on_quit_button_pressed"]
[connection signal="finished" from="MusicPlayer" to="." method="_on_music_player_finished"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
